# gpuFFT

./: CMakeLists.txt  README.md
include/: fft_config.h
kernels/: fft2d.cl  fft_8.cl  twid_radix4_8.cl
src/: main.cpp  opencl.cpp
