cmake_minimum_required(VERSION 3.10)
project(BenchCL)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_REQUIRED_FLAGS -std=c++17)
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++17 -w")
FIND_PACKAGE(OpenCL)
FIND_LIBRARY(OPENCL_LIBRARIES OpenCL ENV LD_LIBRARY_PATH)
INCLUDE_DIRECTORIES(/opt/AMDAPPSDK-3.0/include/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/)

LINK_DIRECTORIES(/opt/AMDAPPSDK-3.0/lib/x86_64/)
ADD_EXECUTABLE(${PROJECT_NAME} 
	src/main.cpp
    src/opencl.cpp
    src/options.cpp
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
        ${OPENCL_LIBRARIES}
        stdc++fs
)
